# pastething-rust

./: .env  Cargo.toml  README.md  config.yml
migrations/2020-03-10-212716_create_pastes/: up.sql
migrations/2020-03-10-213205_create_stats/: up.sql
migrations/2020-03-10-213215_create_dailystats/: down.sql  up.sql
src/: config.rs  db.rs  main.rs  models.rs  schema.rs  templates.rs
templates/: 404.html  500.html  about.html  api.html  deleted.html  layout.html  newpaste.html  stats.html  viewpaste.html
