[package]
name = "pastething-rust"
version = "0.1.0"
authors = ["Luis Batalha <lfrb25@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/lbatalha/pastething-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
actix-multipart = "0.2"
listenfd = "0.3" # used only for code change auto-reload
askama = { version = "0.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.1"
syntect = "3.3"


